# scf-security

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.en.md  README.md  RELEASE-NOTES.md  build.sh
cmake/: SetSecureFlags.cmake  SetupCoverage.cmake
cmake/scripts/: filter_tool.py
config/: CMakeLists.txt  config_template.json
docs/cn/: api_documentation.md
fuzz/: CMakeLists.txt  test_scf_policy.cpp
sample/: CMakeLists.txt  client_main.cpp  client_main_new.cpp  client_main_tcp.cpp  sample.md  server_main.cpp  server_main_new.cpp  server_main_tcp.cpp
sample/test_include/: test_tcp_client.h  test_tcp_common.h  test_tcp_server.h
sample/test_utils/: test_tcp_client.cpp  test_tcp_common.cpp  test_tcp_server.cpp
scripts/rpm/: scf-security.spec
src/: CMakeLists.txt  README.md
src/adaptor/: CMakeLists.txt  session_key_update.cpp  tls_init.cpp
src/adaptor/base/: CMakeLists.txt  abstract_tls_adaptor.h  dlopen_lib_base.cpp  dlopen_lib_base.h
src/adaptor/openssl/: CMakeLists.txt  lib_crypto_api.cpp  lib_crypto_api.h  lib_ssl_api.cpp  lib_ssl_api.h  openssl_adaptor.cpp  openssl_adaptor.h  openssl_def.h
src/callback/: CMakeLists.txt  crypto_callback.cpp  logger_callback.cpp
src/common/: CMakeLists.txt
src/common/constant/: constant_def.h
src/common/utils/: CMakeLists.txt  crypto_util.cpp  crypto_util.h  custom_logger.cpp  custom_logger.h  error_message_match_util.cpp  file_check.cpp  file_ctx.cpp  parse_config.cpp  parse_config.h  policy_utils.cpp  scf_inner.h
src/connection/: scf_connection_impl.cpp
src/crypto/: CMakeLists.txt  default_crypto_engine.cpp  kae_provider_engine.cpp  kae_provider_engine.h
src/include/: CMakeLists.txt  scf.h  scf_connection.h  scf_crypto_engine.h  scf_def.h  scf_errno.h  scf_ssl.h  scf_transport.h
src/scf/: CMakeLists.txt
src/scf/connection/: connection.cpp  obj.cpp
src/scf/policy/: CMakeLists.txt  config.cpp  file_context.cpp  policy.cpp  readme.md
src/scf/policy/auth/: CMakeLists.txt
src/scf/policy/auth/cert/: CMakeLists.txt  cert.cpp
src/scf/policy/auth/psk/: psk.cpp  psk_key_policy.cpp  psk_session_policy.cpp
src/transport/: CMakeLists.txt  socket_transport.cpp  socket_transport.h  urma_transport.cpp  urma_transport.h
test/: CMakeLists.txt
test/test_cpp/: main.cpp  scf_get_test_openssl.cpp  scf_key_update_test_openssl.cpp  scf_smoke_test.cpp  test_config_parse.cpp  test_connection.cpp  test_coverage_boost.cpp  test_crypto_engine.cpp  test_crypto_util.cpp  test_file_check.cpp  test_file_ctx.cpp  test_kae_provider_engine.cpp  test_key_update.cpp  test_line_coverage_boost.cpp  test_parse_config.cpp  test_policy.cpp  test_policy_utils.cpp  test_scf_api.cpp  test_socket_transport.cpp  test_tls_api_openssl.cpp  test_tls_dlopen_api.cpp  test_urma_transport.cpp
test/test_data/: configfile.json  test_config_succ.json
test/test_data/certificate/ecdsa_sha384/: client.key.pem  client.pem  root.pem
test/test_data/certificate/test_cert/: ca.pem  client.key  client.pem
test/test_include/: stub.h  test_log.h  test_scf.h  test_tcp_client.h  test_tcp_common.h  test_tcp_server.h
test/test_utils/: test_scf.cpp  test_tcp_client.cpp  test_tcp_common.cpp  test_tcp_connection.cpp  test_tcp_server.cpp
